--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz</title>
-    <link rel="stylesheet" href="styles.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Quiz App</title>
+<link rel="stylesheet" href="styles.css">
 </head>
-<body style="background-color: #f1e0a8;">
-    <div id="quiz-container">
-        <h1>Quiz</h1>
-        <div id="timer">Time: <span id="time">03:00</span></div>
-        <div id="question-container"></div>
-        <div id="navigation">
-            <button id="prev-button" onclick="prevPage()">Previous</button>
-            <button id="next-button" onclick="nextPage()">Next</button>
-            <button id="submit-button" onclick="submitQuiz()" style="display:none;">Submit</button>
-        </div>
+<body>
+<div id="quiz-container">
+    <div id="time">03:00</div>
+    <div id="question-container"></div>
+    <div class="navigation">
+        <button id="prev-button" onclick="prevPage()">Previous</button>
+        <button id="next-button" onclick="nextPage()">Next</button>
+        <button id="submit-button" onclick="submitQuiz()">Submit</button>
+        <button id="retake-button" style="display: none;" onclick="retakeQuiz()">Retake Quiz</button>
     </div>
-    <script src="script.js"></script>
+</div>
+<script src="script.js"></script>
 </body>
 </html>
